tests/invalid/variadic_function_wrong_type.lang
module main

func variadic2(a: ...i32) {

}

func variadic(a: ...i32) {
    variadic2(1, ...a);
}

func main() {
    variadic(1, 2, 3);
}

